@@ -8,10 +8,12 @@ charcoal=Charcoal
 filter-charcoal=Charcoal filter
 pellet-charcoal=Charcoal pellet
 rocket-part=Rocket part
+sct-lab-lab2=Exoplanetary Studies Lab
 
 [entity-name]
 home=Home
 sb-ore-sorting-facility-5=Ore sorting facility 5
+sct-lab-lab2=Exoplanetary Studies Lab
 
 [technology-name]
 sb-startup1=Crush stiratite
@@ -23,12 +25,14 @@ zinc-processing=Brass processing
 bio-processing-brown=Brown algae processing
 bio-processing-green=Green algae processing
 sb-bio-processing-advanced=Advanced algae processing
+sct-lab-lab2=Exoplanetary Studies Lab
 
 [technology-description]
 sb-startup1=Crushed saphirite can be smelted to iron plates. Crushed stiratite can be smelted to copper plates.
 sb-startup2=Grow brown algae in an algae farm. Brown algae can be crafted into alginic acid which is needed to make wooden boards.
 sb-startup3=Craft a basic circuit board. Basic circuit boards are required to craft most machines.
 alloy-processing=
+sct-lab-lab2=Exoplanetary Studies Lab
 
 [item-description]
 sb-angelsore3-tool=Collect crushed stiratite ore from a burner ore crusher to complete this research
