@@ -5,6 +5,7 @@ Date: ???
     - Science Cost Tweaker: #247
       - Purple and some military science intermediates are craftable in an Electronics assembling machine
       - Bio science can use productivity modules
+      - Renamed Lab 2 to Exoplanetary Studies Lab
   Bugfixes:
     - Lab 2 could not be researched (without SCT) #244
     - Error when using custom colors for tiers with Artisanal Reskins #251
